--- a/package.json
+++ b/package.json
@@ -9,9 +9,20 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "core-js": "^3.8.3",
+    "normalize": "^0.3.1",
+    "normalize.css": "^8.0.1",
+    "owl.carousel": "^2.3.4",
+    "swiper": "^6.8.4",
+    "tiny-slider": "^2.9.4",
     "vue": "^3.2.13",
+    "vue-ai-carousel": "^1.1.1",
+    "vue-carousel": "^0.18.0",
+    "vue-owl-carousel": "^2.0.3",
     "vue-router": "^4.0.3",
+    "vue-slider-component": "^3.2.24",
+    "vue-tiny-slider": "^0.1.39",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
@@ -33,6 +44,7 @@
     "jest": "^27.0.5",
     "prettier": "^2.4.1",
     "sass": "^1.32.7",
-    "sass-loader": "^12.0.0"
+    "sass-loader": "^12.0.0",
+    "webpack": "^5.88.2"
   }
 }
