--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "core-js": "^3.8.3",
+    "js-cookie": "^3.0.5",
     "normalize": "^0.3.1",
     "normalize.css": "^8.0.1",
+    "primevue": "^3.35.0",
     "swiper": "^10.3.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
@@ -29,15 +31,18 @@
     "@vue/cli-service": "~5.0.0",
     "@vue/test-utils": "^2.0.0-0",
     "@vue/vue3-jest": "^27.0.0-alpha.1",
+    "autoprefixer": "^10.4.16",
     "babel-jest": "^27.0.6",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
     "jest": "^27.0.5",
+    "postcss": "^8.4.30",
     "prettier": "^2.4.1",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
+    "tailwindcss": "^3.3.3",
     "webpack": "^5.88.2"
   }
 }
